<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_1"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/e1"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:background="#FFFF"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <EditText
        android:id="@+id/e2"
        android:layout_width="210dp"
        android:layout_height="32dp"
        android:background="#FFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/e1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button1"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="390dp"
        android:background="@drawable/gradient_background"
        android:text="@string/submit"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e2" />

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="173dp"
        android:layout_marginBottom="318dp"
        android:text="@string/create_account"
        android:textColor="#CAF6CC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />
</androidx.constraintlayout.widget.ConstraintLayout>